# python-intermediate-rivercatchment

./: .gitignore  LICENSE  README.md  catchment-analysis.py  catchment_analysis.py  example.ipynb  pyproject.toml  requirements.txt  test.ipynb  tutorial.py
.github/workflows/: main.yml
catchment/: compute_data.py  models.py  test_compute_data.py
tests/: test_compute_data.py  test_compute_test.py  test_models.py
