[tool.poetry]
name = "catchment"
version = "1.0.0"
description = "Analyse river catchment river project data"
authors = ["Priya Gordon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
